--- a/index.html
+++ b/index.html
@@ -3,9 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resep Ikan Gurame Pedas Manis</title>
 </head>
 <body>
-<h1>Akmal Shiddiq</h1>    
+    <h2><center>Resep Ikan Gurame Manis Pedas</center></h2>
+<p><center>Dibuat Oleh: Akmal Shiddiq</center></p>
+<center><img src="Gurame akmal.jpg" alt=""></center>
+
+<p>Gurame manis pedas adalah salah satu menu olahan ikan gurame yang sangat populer di Indonesia. Cita rasanya yang unik dan kaya, memadukan rasa manis, pedas, dan sedikit asam, menjadikannya favorit banyak orang.
+
+
+
+    Gurame yang digunakan biasanya digoreng hingga kering dan renyah, lalu disiram dengan saus kental yang terbuat dari campuran bumbu dan sayuran. Saus inilah yang menjadi kunci utama kelezatan hidangan ini.</p>
+
+     <p>Bahan Utama / OL</p>
+<ol>
+    <li>1 ekor ikan gurame segar (sekitar 500-700 gram)</li>
+    <li>1 buah jeruk nipis</li>
+    <li>Garam secukupnya</li>
+    <li>Tepung serbaguna atau tepung maizena secukupnya</li>
+    <li>Minyak goreng secukupnya</li>
+
+</ol>
+<p>Saus / LO</p>
+<ul>
+<li>Bawang bombai</li>
+<li>bawang putih</li>
+<li>berbagai jenis cabai</li>
+<li>saus tomat</li>
+<li>saus sambal</li>
+<li>saus tiram</li>
+<li>air</li>
+<li>larutan maizena</li>
+<li>gula</li>
+<li>garam</li>
+<li>merica</li>
+</ul>
+
+<p>Cara Membuat</p>
+<ol>
+<li>Persiapan Ikan: Bersihkan ikan gurame, buang sisik dan isi perutnya. Cuci bersih, lalu lumuri dengan air perasan jeruk nipis dan garam. Diamkan sekitar 15 menit untuk menghilangkan bau amis. Setelah itu, bilas dan keringkan.</li>
+
+<li>Menggoreng Ikan: Sayat-sayat badan ikan agar bumbu meresap. Balur seluruh permukaan ikan dengan tepung serbaguna atau maizena hingga merata. Panaskan minyak dalam wajan, lalu goreng ikan gurame hingga matang dan berwarna kuning keemasan. Angkat dan tiriskan, lalu tata di atas piring saji.</li>
+
+<li>Membuat Saus: Gunakan sedikit minyak sisa menggoreng ikan. Tumis bawang bombai dan bawang putih hingga layu dan harum. Masukkan irisan cabai, lalu aduk sebentar.</li>
+
+<li>Memasak Saus: Tambahkan saus tomat, saus sambal, saus tiram, kecap ikan, garam, gula, dan merica. Aduk rata. Masukkan air dan masak hingga mendidih.</li>
+
+<li>Mengentalkan Saus: Masukkan sayuran pelengkap (jika menggunakan) seperti wortel dan masak hingga agak empuk. Tuang larutan maizena sedikit demi sedikit sambil terus diaduk hingga saus mengental.</li>
+
+<li>Penyajian: Siramkan saus manis pedas yang sudah jadi di atas ikan gurame goreng yang sudah ditata di piring. Gurame manis pedas siap disajikan selagi hangat.</li>
+
+</ol>
+    
+
+
+<h2><center>Ikan Gurame Siap Dimakan</center></h2>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
