Edit  nama foto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h2><center>Resep Ikan Gurame Manis Pedas</center></h2>
 <p><center>Dibuat Oleh: Akmal Shiddiq</center></p>
-<center><img src="Gurame akmal.jpg" alt=""></center>
+<center><img src="Gurame akmal.jpg.jpg" alt=""></center>
 
 <p>Gurame manis pedas adalah salah satu menu olahan ikan gurame yang sangat populer di Indonesia. Cita rasanya yang unik dan kaya, memadukan rasa manis, pedas, dan sedikit asam, menjadikannya favorit banyak orang.
 
